--- a/Bode_Analyzer_APP/mainwindow.ui
+++ b/Bode_Analyzer_APP/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1205</width>
-    <height>718</height>
+    <width>1212</width>
+    <height>674</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>70</y>
+      <x>310</x>
+      <y>30</y>
       <width>581</width>
       <height>491</height>
      </rect>
@@ -30,37 +30,55 @@
      <item>
       <widget class="QPushButton" name="Receive_USB">
        <property name="text">
-        <string>Send</string>
+        <string>Recibir Bode</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="Connect_USB">
        <property name="text">
-        <string>Connect</string>
+        <string>Conectar</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QTextEdit" name="TBox_2">
+   <widget class="QLabel" name="label_connection_ok">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>340</y>
-      <width>579</width>
-      <height>413</height>
+      <x>420</x>
+      <y>540</y>
+      <width>361</width>
+      <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Conexión Exitosa</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
-   <widget class="QTextEdit" name="TBox">
+   <widget class="QPushButton" name="Reset_Axis">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>-30</y>
-      <width>579</width>
-      <height>413</height>
+      <x>900</x>
+      <y>30</y>
+      <width>101</width>
+      <height>24</height>
      </rect>
+    </property>
+    <property name="text">
+     <string>Reestablecer Ejes</string>
     </property>
    </widget>
   </widget>
@@ -69,7 +87,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1205</width>
+     <width>1212</width>
      <height>21</height>
     </rect>
    </property>
